Criando estrutura basica das postagens

--- a/paginas/index.html
+++ b/paginas/index.html
@@ -19,6 +19,27 @@
             <a href="eletronicos.html">Eletrônicos</a>
         </div>
     </div>
+    <div id="area-principal">
+        <div id="area-postagens">
+            <!-- Abertura Postagem -->
+            <div class="postagem">
+                <h2>Titulo da Postagem 1</h2>
+                <span>postado 20 março 2020</span>
+                <img src="../imagens/imagem1.jpg" width="620px">
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec vel elit at sapien venenatis interdum vitae sed purus. Mauris tempor sagittis eros a mattis. Mauris ultrices ligula vitae nunc luctus finibus. Nunc sodales, odio ut efficitur semper, metus tellus consectetur nisi, in volutpat neque felis sed nulla. 
+                </p>
+                <a href="#">Leia Mais</a>
+            </div>
+            <!-- Fechamento Postagem -->
+        </div>
+        <div id="area-lateral">
+            Area Lateral
+        </div>
+        <div id="rodape">
+            Todos os direitos reservados
+        </div>
+    </div>
 
 </body>
 </html>
