Criando barra de conteudo lateral e completando a estrutura basica do site

--- a/paginas/index.html
+++ b/paginas/index.html
@@ -24,8 +24,19 @@
             <!-- Abertura Postagem -->
             <div class="postagem">
                 <h2>Titulo da Postagem 1</h2>
-                <span>postado 20 março 2020</span>
+                <span class="data-postagem">postado 20 março 2020</span>
                 <img src="../imagens/imagem1.jpg" width="620px">
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec vel elit at sapien venenatis interdum vitae sed purus. Mauris tempor sagittis eros a mattis. Mauris ultrices ligula vitae nunc luctus finibus. Nunc sodales, odio ut efficitur semper, metus tellus consectetur nisi, in volutpat neque felis sed nulla. 
+                </p>
+                <a href="#">Leia Mais</a>
+            </div>
+            <!-- Fechamento Postagem -->
+             <!-- Abertura Postagem -->
+            <div class="postagem">
+                <h2>Titulo da Postagem 2</h2>
+                <span class="data-postagem">postado 10 março 2020</span>
+                <img src="../imagens/imagem2.jpg" width="620px">
                 <p>
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec vel elit at sapien venenatis interdum vitae sed purus. Mauris tempor sagittis eros a mattis. Mauris ultrices ligula vitae nunc luctus finibus. Nunc sodales, odio ut efficitur semper, metus tellus consectetur nisi, in volutpat neque felis sed nulla. 
                 </p>
@@ -34,7 +45,29 @@
             <!-- Fechamento Postagem -->
         </div>
         <div id="area-lateral">
-            Area Lateral
+            <div class="conteudo-lateral">
+                <h3>Postagens Recentes</h3>
+                <div class="postagem-lateral">
+                    <p class="texto-lateral">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                    <a href="#">Leia Mais</a>
+                </div>
+                <div class="postagem-lateral">
+                    <p class="texto-lateral">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                    <a href="#">Leia Mais</a>
+                </div>
+                <div class="postagem-lateral" style="border-bottom: none;">
+                    <p class="texto-lateral">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                    <a href="#">Leia Mais</a>
+                </div>
+            </div>
+            
+            <div class="conteudo-lateral">
+                <h3>Categorias</h3>
+                <a href="jogos.html">Jogos</a><br>
+                <a href="celulares.html">Celulares</a><br>
+                <a href="informatica.html">Informática</a><br>
+                <a href="eletronicos.html">Eletrônicos</a><br>
+            </div>
         </div>
         <div id="rodape">
             Todos os direitos reservados
